# PyNest

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  ReadMe.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements-dev.txt  requirements-release.txt  requirements-tests.txt  requirements.txt  requirements_dev.txt  sitemap.xml
.claude/: settings.json
.claude/commands/: pynest-explain.md  pynest-resource.md
.github/workflows/: cli_test.yaml  deploy_docs.yaml  integration_test.yaml  release.yaml  release_beta.yaml  tests.yaml
api/: index.html
database/: index.html
decorators/: index.html
docs/: api.md  async_orm.md  blank.md  cli.md  controllers.md  database.md  decorators.md  dependency_injection.md  docker.md  exception_filters.md  getting_started.md  guards.md  index.html  index.md  installation.md  introduction.md  license.md  lifespan_tasks.md  modules.md  mongodb.md  param_decorators.md  providers.md  pynest_exceptions_guide.md  sync_orm.md  task_scheduling.md  websockets.md
docs/decorators/: controller.md  module.md  service.md  utils.md
docs/styles/: extra.css
docs/superpowers/plans/: 2026-05-13-cli-generation-experience.md
docs/superpowers/specs/: 2026-05-13-cli-generation-experience-design.md
examples/: guard_examples.py
examples/BlankApp/: app.py  main.py
examples/BlankApp/src/: app_controller.py  app_module.py  app_service.py
examples/BlankApp/src/example/: example_controller.py  example_module.py  example_service.py
examples/BlankApp/src/product/: product_controller.py  product_model.py  product_module.py  product_service.py
examples/BlankApp/src/user/: user_controller.py  user_model.py  user_module.py  user_service.py
examples/CommandLineApp/: main.py
examples/CommandLineApp/src/: app_controller.py  app_module.py  app_service.py
examples/CommandLineApp/src/user/: user_controller.py  user_module.py  user_service.py
examples/MongoApp/: README.md  app.py  config.py  requirements.txt
examples/MongoApp/src/: app_controller.py  app_module.py  app_service.py  config.py
examples/MongoApp/src/example/: example_controller.py  example_entity.py  example_model.py  (+2 more)
examples/OrmAsyncApp/: app.py  config.py  main.py  requirements.txt
examples/OrmAsyncApp/src/: app_controller.py  app_module.py  app_service.py  config.py
examples/OrmSyncApp/: .dockerignore  README.md  app.py  config.py  main.py  requirements.txt
examples/OrmSyncApp/src/: app_controller.py  app_module.py  app_service.py  config.py
examples/SchedulerApp/: main.py
examples/SchedulerApp/src/: app_controller.py  app_module.py  app_service.py  scheduler_service.py
examples/nest_mongo_products/: README.md  app.py  main.py  orm_config.py  requirements.txt
examples/nest_products/: app.py  app_controller.py  app_module.py  app_service.py  main.py  orm_config.py
examples/nest_products_mongo/: .env.example  app.py  main.py  odm_config.py
installation/: index.html
license/: index.html
nest/cli/: __init__.py  cli.py  cli_decorators.py  click_handlers.py  pynest_cli_factory.py
nest/cli/src/: app_controller.py  app_module.py  app_service.py  utils.py
nest/cli/templates/: __init__.py  abstract_empty_template.py  base_template.py  blank_template.py  cli_templates.py  mongo_db_template.py  mongo_template.py  mysql_template.py  orm_template.py  postgres_template.py  relational_db_template.py  sqlite_template.py  templates_factory.py
nest/common/: __init__.py  constants.py  decorators.py  exceptions.py  interfaces.py  mcp_resolver.py  module.py  provider.py  route_resolver.py
nest/common/templates/: __init__.py  app.py  base_template.py  blank_template.py  controller.py  dockerfile.py  entity.py  main.py  model.py  module.py  mongo_template.py  mysql_template.py  orm_config.py  orm_template.py  postgres_template.py  readme.py  requierments.py  service.py  sqlite_template.py  templates_factory.py
nest/core/: __init__.py  app.py  cli_factory.py  dependency_graph.py  encapsulation.py  guards.py  injectable.py  injector_module.py  mcp_factory.py  module.py  nest_module.py  protocols.py  pynest_app_context.py  pynest_application.py  pynest_container.py  pynest_factory.py  pynest_mcp_application.py
nest/core/apscheduler/: __init__.py  apscheduler.py
nest/core/database/: __init__.py  base_odm.py  base_orm.py  config.py  database_module.py  odm_config.py  odm_provider.py  orm_config.py  orm_provider.py
nest/core/decorators/: __init__.py  class_based_view.py  controller.py  database.py  filters.py  guards.py  helpers.py  http_code.py  http_method.py  http_methods.py  injectable.py  module.py  scheduler.py  utils.py
nest/database/: odm_config.py  odm_provider.py  orm_config.py  orm_provider.py
nest/engine/: types.py
nest/engine/fastapi/: __init__.py
nest/engine/proto/: __init__.py  app.py  route.py  router.py
nest/web/: __init__.py  class_based_view.py  controller.py  http_code.py  http_method.py  pynest_fastapi_application.py  pynset_web_factory.py
nest/websockets/: __init__.py  context.py  decorators.py  gateway.py  server.py
search/: search_index.json
tests/test_cli/: test_add_command.py  test_generate_gateway.py  test_generation_compatibility.py  test_generation_result.py  test_new_command.py  test_orm_templates.py  test_package_extras.py
tests/test_common/: test_exceptions.py  test_http_exception.py  test_lifecycle_interfaces.py  test_module_compiler.py  test_param_decorators.py  test_provider.py  test_route_resolver.py
tests/test_core/: __init__.py  test_app.py  test_dependency_graph.py  test_encapsulation.py  test_exception_filters_integration.py  test_injector_module.py  test_lifecycle_hooks.py  test_pynest_application.py  test_pynest_container.py  test_pynest_factory.py
tests/test_core/test_database/: test_database_module.py  test_odm.py  test_orm.py
tests/test_core/test_decorators/: test_controller.py  test_filters.py  test_guard.py  test_injectable.py  test_scheduler.py
tests/test_websockets/: test_decorators.py  test_gateway_router.py  test_integration.py  test_server.py
usage/: index.html
(+102 files in other folders)
