[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "pynest-api"
version = "0.4.0"
description = "PyNest is a FastAPI Abstraction for building microservices, influenced by NestJS."
authors = [
    { name = "itay.dar", email = "itay2803@gmail.com" },
]
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "click>=8.1.7,<9.0.0",
    "injector>=0.22.0,<0.23.0",
    "astor>=0.8.1,<0.9.0",
    "pyyaml>=6.0.2,<7.0.0",
    "fastapi>=0.115.4,<0.116.0",
    "pydantic>=2.9.2,<3.0.0",
    "uvicorn>=0.32.0,<0.33.0",
    "black>=24.10.0,<25.0.0",
]

[project.optional-dependencies]
postgres = [
    "sqlalchemy>=2.0.36,<3.0.0",
    "asyncpg>=0.30.0,<0.31.0",
    "psycopg2>=2.9.3,<3.0.0",
    "alembic>=1.13.3,<2.0.0",
    "greenlet>=3.1.1,<4.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]
mongo = [
    "beanie>=1.27.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
]
test = [
    "pytest>=7.0.1,<8.0.0",
]

[dependency-groups]
test = [
    "pytest>=7.0.1,<8.0.0",
    "sqlalchemy>=2.0.36,<3.0.0",
    "motor>=3.2.0,<4.0.0",
    "beanie>=1.27.0,<2.0.0",
    "python-dotenv>=1.0.1,<2.0.0",
    "aiosqlite>=0.19.0,<1.0.0",
]
docs = [
    "mkdocs-material>=9.5.43,<10.0.0",
    "mkdocstrings-python>=1.12.2,<2.0.0",
]
build = [
    "build>=1.2.2.post1,<2.0.0",
    "twine>=6.2.0,<7.0.0",
    "git-changelog>=2.5.2,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/PythonNest/PyNest"
Documentation = "https://pythonnest.github.io/PyNest/"

[project.scripts]
pynest = "nest.cli.cli:nest_cli"

[tool.hatch.build.targets.wheel]
packages = ["nest"]

[tool.hatch.build.targets.sdist]
include = [
    "nest",
    "tests",
    "README.md",
    "LICENSE",
    "pyproject.toml",
]

[tool.black]
force-exclude = '''
/(
  | /*venv*
  | /.git
  | /dist
  | /pytest_compare.egg-info
  | *.bac
  | .mypy_cache
  | .coverage
  | /htmlcov
  | /docs
  | /site
)/
'''

[tool.mypy]
exclude = [
    "/*venv*"
]
ignore_missing_imports = true
